--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -19,6 +19,7 @@
         <android.support.v4.widget.NestedScrollView
             android:id="@+id/details_nested_scrollview"
             android:clipToPadding="false"
+            android:fillViewport="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/opaque_white"
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:background="@android:color/transparent"
+            android:transitionName="test"
             android:transitionGroup="false"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
