--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_vertical_margin"
-        app:contentPadding="@dimen/activity_vertical_margin">
+        app:contentPadding="@dimen/activity_vertical_margin"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
