--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Favorite a recipe to see it here!"/>
+            android:text="@string/favorites_empty_card"/>
 
     </android.support.v7.widget.CardView>
 
