--- a/app/src/main/res/layout/fragment_recipebook.xml
+++ b/app/src/main/res/layout/fragment_recipebook.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_recipe_book"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="project.hnoct.kitchen.ui.FragmentRecipeBook"
     tools:showIn="@layout/activity_recipebook">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/recipe_book_cardview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        app:contentPadding="@dimen/activity_horizontal_margin">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/recipe_book_empty_card"/>
+    </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipe_book_recyclerview"
